create mobile index page

--- a/src/components/aesthetic/aesthetic.pug
+++ b/src/components/aesthetic/aesthetic.pug
@@ -1,6 +1,6 @@
+include ../header-text/header-text.pug
 mixin aesthetic()
     section.aesthetic&attributes(attributes)
-        .container 
-            h2.aesthetic__header Aesthetic ethical drinking
+        +h2-text("Aesthetic ethical drinking","aesthetic__header")(class="container")
             p.aesthetic__text Deep v you probably haven't heard of them banh mi synth actually affogato. Artlyft ethical the one drinking vinegar austint
 
