--- a/src/components/new-collection/new-collection.pug
+++ b/src/components/new-collection/new-collection.pug
@@ -1,35 +1,33 @@
+include ../header-text/header-text.pug
 mixin new-collection()
     section.new-collection&attributes(attributes)
         .new-collection__inner 
-            .new-collection__title 
-                h3.new-collection__header Furniture new collection
+            +header-text("Furniture new collection","new-collection__header","center")(class="new-collection__header-container")
                 p.new-collection__text Deep v you probably haven't heard of them banh mi synth actually affogato. Aesthetic lyft ethical drinking vinegar austint
 
             .new-collection__list 
                 a.new-collection__item(href="#")
                     img.new-collection__item-img(src="/img/content/new-collection-1.jpg", alt="")
-                    .new-collection__item-info
-                        h4.new-collection__item-header Truffaut literally trust
+                    +h4-text("Truffaut literally trust","new-collection__item-header","center")(class="new-collection__item-info")
                         p.new-collection__item-text Living room furntiture | Chair
                 a.new-collection__item(href="#")
                     img.new-collection__item-img(src="/img/content/new-collection-2.jpg", alt="")
-                    .new-collection__item-info 
-                        h4.new-collection__item-header Truffaut literally trust
+                    +h4-text("Truffaut literally trust","new-collection__item-header","center")(class="new-collection__item-info")
                         p.new-collection__item-text Living room furntiture | Chair
+                      
                 a.new-collection__item(href="#")
                     img.new-collection__item-img(src="/img/content/new-collection-3.jpg", alt="")
-                    .new-collection__item-info 
-                        h4.new-collection__item-header Truffaut literally trust
+                    +h4-text("Truffaut literally trust","new-collection__item-header","center")(class="new-collection__item-info")
                         p.new-collection__item-text Living room furntiture | Chair
+                    
                 a.new-collection__item(href="#")
                     img.new-collection__item-img(src="/img/content/new-collection-4.jpg", alt="")
-                    .new-collection__item-info 
-                        h4.new-collection__item-header Truffaut literally trust
+                    +h4-text("Truffaut literally trust","new-collection__item-header","center")(class="new-collection__item-info")
                         p.new-collection__item-text Living room furntiture | Chair
+                    
                 a.new-collection__item(href="#")
                     img.new-collection__item-img(src="/img/content/new-collection-5.jpg", alt="")
-                    .new-collection__item-info 
-                        h4.new-collection__item-header Truffaut literally trust
+                    +h4-text("Truffaut literally trust","new-collection__item-header","center")(class="new-collection__item-info")
                         p.new-collection__item-text Living room furntiture | Chair
-            
+                    
 
