--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -17,11 +17,11 @@ block page
 block main
     +slider()(class="main__slider")
     +new-collection()(class="main__new-collection container-fluid")
-    //- +aesthetic()(class="main__aesthetic")
-    //- +how-it-work()(class="main__how-it-work container")
-    //- include gallary-data.pug
-    //- +gallery(gallaryData)(class="main__gallery")
-    //- +double-post()(class="main__double-post container")
+    +aesthetic()(class="main__aesthetic")
+    +how-it-work()(class="main__how-it-work container")
+    include gallary-data.pug
+    +gallery(gallaryData)(class="main__gallery")
+    +double-post()(class="main__double-post container")
         
     
 
