--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -1,4 +1,5 @@
 @import "../../components/layout/layout.scss";
+@import "../../components/header-text/header-text.scss";
 @import "../../components/slider/slider.scss";
 @import "../../components/new-collection/new-collection.scss";
 @import "../../components/aesthetic/aesthetic.scss";
