--- a/src/components/aesthetic/aesthetic.scss
+++ b/src/components/aesthetic/aesthetic.scss
@@ -1,28 +1,28 @@
 .aesthetic {
     min-height: 618px;
-    background-image: url(/img/aesthetic.jpg);
+    background-image: url(../../img/aesthetic.jpg);
     background-repeat: no-repeat;
     background-image: top center;
     background-size: cover;
     padding-top: 172px;
     text-align: left;
+    @media (max-width:768px) {
+        min-height: auto;
+        padding: 10px;
+    }
+   
     &__header {
         font: $h-font;
         color: $h-color;
         font-size: $h2-size;
         line-height: $h2-line-height;
         max-width: 730px;
-        position: relative;
-        padding-bottom: 23px;
-        margin-bottom: 21px;
-        &::before {
-            content: "";
-            position: absolute;
-            width: 200px;
-            height: 1px;
-            background-color: #6D7278;
-            left: 0px;
-            bottom: 1px;
+        @media (max-width:768px) {
+            font-size: 36px;
+            line-height: 51px;
+        }
+        @media (max-width:575px) {
+            font-size: 25px;        
         }
     }
     &__text {
