--- a/src/components/double-post/double-post.scss
+++ b/src/components/double-post/double-post.scss
@@ -8,9 +8,19 @@
         text-align: center;
         max-width: 430px;
         margin: 0px auto 30px auto;
+        @media (max-width:575px) {
+            font-size: 25px;    
+            max-width: none;        
+            margin-bottom: 10px;
+        }
     }
     &__list {
+        margin: 0 auto;
         display: flex;
+        @media (max-width:768px) {
+            flex-direction: column;
+            align-items: center;
+        }
     }
     &__item {
         flex-grow: 1;
@@ -18,6 +28,12 @@
         width: 100%;
         &+& {
             margin-left: 30px;
+        }
+        @media (max-width:768px) {
+            margin-top: 10px;
+            &+& {
+                margin-left: 0px;
+            }
         }
     }
 }
