--- a/src/components/gallery/gallery.scss
+++ b/src/components/gallery/gallery.scss
@@ -5,6 +5,11 @@
     &__filter-list {
         display: flex;
         justify-content: center;
+        @media (max-width:575px) {
+            flex-wrap: wrap;
+            justify-content:flex-start;
+            
+        }
     }
     &__filter-item {
         font: $text-font;
@@ -21,6 +26,24 @@
         &--active {
             background-color: rgba( #FFEF35, 1);
             border-color: transparent;
+        }
+        @media (max-width:768px) {
+            &+& {
+                margin-left: 5px;
+            }
+            border-radius: 0;
+            padding: 2px;
+            font-weight: 400;
+            
+        }
+        @media (max-width:575px) {
+            border-top: none;
+            border-left: none;
+
+            
+            &:hover{
+                background-color: rgba(#FFEF35,0.2);
+            }
         }
     }
     &__content {}
@@ -39,6 +62,10 @@
             object-fit: cover;
             width: 100%;
             height: 100%;
+        }
+        @media (max-width:575px) {
+            display: block;            
+            grid-gap: 5px;
         }
     }
 }
