--- a/src/components/new-collection/new-collection.scss
+++ b/src/components/new-collection/new-collection.scss
@@ -2,31 +2,26 @@
     &__title {
         text-align: center;
     }
+    &__header-container{
+        max-width: 730px;
+        margin: 0px auto 30px; 
+    }
     &__header {
         font: $h-font;
         font-size: $h3-size;
         line-height: $h3-line-height;
-        padding-bottom: 26px;
-        position: relative;
-        margin-bottom: 24px;
-        &::before {
-            content: "";
-            position: absolute;
-            width: 252px;
-            height: 1px;
-            background-color: #6d7278;
-            bottom: 1px;
-            left: 50%;
-            transform: translateX(-50%);
+        @media (max-width:575px) {
+            font-size: 25px;            
         }
     }
     &__text {
-        max-width: 730px;
-        margin: 0px auto 30px;
+       
     }
     &__list {
         display: grid;
         grid-template-columns: repeat(5, 1fr);
+        margin: 0 auto;
+        justify-items: center; 
     }
     &__item {
         display: inline-block;
@@ -35,6 +30,11 @@
         max-width: 350px;
         object-fit: cover;
         width: 100%;
+        @media (max-width:768px) {
+            &+&{
+                margin-top: 10px;
+            }            
+        }
     }
     &__item-img {
         object-fit: cover;
@@ -63,22 +63,10 @@
         font-size: 20px;
         line-height: 24px;
         color: $h-color;
-        padding-bottom: 20px;
-        position: relative;
-        margin-bottom: 20px;
-        &::before {
-            content: "";
-            position: absolute;
-            width: 200px;
-            height: 1px;
-            background-color: #6d7278;
-            bottom: 1px;
-            left: 50%;
-            transform: translateX(-50%);
-        }
     }
     &__item-text {
         color: #707070;
+        font-size: 14px;
     }
 }
 
@@ -86,6 +74,7 @@
     .new-collection__list {
         grid-template-columns: repeat(3, 1fr);
         grid-row-gap: 20px;
+        
     }
 }
 
@@ -97,6 +86,10 @@
 
 @media (max-width: 768px) {
     .new-collection__list {
-        grid-gap: 20px;
+    grid-gap: 0;
+       display: flex;
+       flex-direction: column;
+       align-items: center;
+
     }
 }
