--- a/src/components/post/post.scss
+++ b/src/components/post/post.scss
@@ -1,5 +1,4 @@
 .post {
-    padding-bottom: 50px;
     &__inner {
         display: flex;
         flex-direction: column;
@@ -13,11 +12,18 @@
         line-height: $h4-line-height;
         color: $h-color;
         margin-bottom: 6px;
+        @media (max-width: 575px) {
+            font-size: $h5-size;
+            line-height: 1.3;
+        }
     }
     &__img-link {
         order: 1;
         flex-grow: 1;
         margin-bottom: 20px;
+        @media (max-width: 575px) {
+            margin-bottom: 5px;
+        }
     }
     &__img {
         width: 100%;
@@ -33,15 +39,22 @@
         order: 2;
         font: $text-font;
         font-size: 14px;
-        line-height: 28px;
+        line-height: 1.3;
         font-weight: 600;
         color: #707070;
         display: flex;
-        margin-bottom: 7px;
+        margin-bottom: 15px;
+        flex-wrap: wrap;
+        @media (max-width:575px) {
+            margin-bottom: 5px;            
+        }
     }
-    &__date {}
-    &__author {}
-    &__category {}
+    &__date {
+    }
+    &__author {
+    }
+    &__category {
+    }
     &__content {
         order: 4;
     }
@@ -61,7 +74,7 @@
             font: $text-font;
             font-size: 14px;
             line-height: 28px;
-            color: #A1A1A1;
+            color: #a1a1a1;
             display: flex;
         }
         .post__category {
