--- a/src/components/slider/slider.scss
+++ b/src/components/slider/slider.scss
@@ -1,77 +1,82 @@
 .slider {
     &__slide {
-        position: relative;
-        padding-top: 815px;
+        // position: relative;
+        // padding-top: 815px;
+        // @media (max-width: 1200px) {
+        //     padding-top: calc(815/1200)*100%;
+        // }
+
+        width: 100%;
+        height: 815px;
+        background-image: url("/img/bg-first-page-header-slider.jpg");
+        background-repeat: no-repeat;
+        background-position: bottom 70px center;
+        background-size: cover;
         @media (max-width: 1200px) {
-            padding-top: calc(815/1200)*100%;
+            height: calc((815px / 1110px) * 0.9 * 100vw);
+        }
+        @media (max-width: 575px) {
+            height: auto;
+            background-position: bottom center;
         }
     }
     &__slide-inner {
-        position: absolute;
-        left: 0;
-        top: 0;
-        max-height: 722px;
+        max-width: 1110px;
+        width: 100%;
         height: 100%;
-        right: 0;
-        background: url("/img/bg-first-page-header-slider.jpg");
-        background-repeat: no-repeat;
-        background-position: top center;
-        background-size: cover;
+        margin: 0 auto;
         display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-        @media (max-width: 1200px) {
-            max-height: 88%;
-        }
+        flex-direction: row-reverse;
     }
     &__slide-content {
-        max-width: 635px;
-        text-align: left;
-    }
-    &__slide-img-content{
-        align-self: flex-start;
-        margin-right: 25px;
-        margin-left: -222px;
-        width: 703px;
-        height: 815px;
+        max-width: 645px;
+        width: 100%;
+        align-self: center;
+        order: 1;
+        margin-bottom: 70px;
+        padding: 10px;
         @media (max-width: 1200px) {
-            width: auto;
-            height: 112%;
-            margin-left: -100px;
+            max-width: none;
+            width: 60%;
+            flex-shrink: 0;
         }
         @media (max-width: 575px) {
-            // display: none !important; //Чтобы не перекрывался правилoм slick-slider
+            width: 100%;
+            margin-bottom: 0;
+        }
+    }
+    &__slide-img-container {
+        order: 2;
+        max-width: 700px;
+        width: 100%;
+        display: flex;
+        justify-content: flex-end;
+        margin-right: 20px;
+        @media (max-width: 575px) {
+            display: none !important; //Чтобы не перекрывался правилoм slick-slider
         }
     }
     &__slide-img {
-        object-fit: cover;
+        height: 100%;
+        width: auto;
     }
     &__slide-header {
         font: $h-font;
         font-size: $h1-size;
         line-height: $h1-line-height;
         color: $h-color;
-        position: relative;
-        padding-bottom: 26px;
-        margin-bottom: 26px;
-        &::before {
-            content: "";
-            position: absolute;
-            width: 183px;
-            height: 1px;
-            background-color: #6D7278;
-            bottom: 0px;
-            left: 0px;
-        }
-        @media (max-width:1200px) {
+
+        @media (max-width: 1200px) {
             font-size: calcFluidFontSize(16, calc($h1-size/1px), 320, 1200);
             line-height: 1.3;
+        }
+        @media (max-width: 575px) {
+            font-size: 25px;
         }
     }
     &__slider-text {
         @media (max-width: 575px) {
-            font-size: (14 * 0.6)px;
+            font-size: (14 * 0.6) px;
             line-height: 1.3;
         }
     }
@@ -83,7 +88,7 @@
     align-items: center;
     line-height: 0px;
     font-size: 0px;
-    li+li {
+    li + li {
         margin-left: 30px;
     }
     button {
@@ -95,6 +100,6 @@
         padding: 0;
     }
     .slick-active button {
-        background-color: #FFEF35;
+        background-color: #ffef35;
     }
 }
