--- a/src/components/collection-list/collection-list.scss
+++ b/src/components/collection-list/collection-list.scss
@@ -2,4 +2,14 @@
 .collection-list {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
+    grid-gap:10px;
+    margin:0 auto;
+    padding: 0 20px;
+    justify-items: center;
+    @media (max-width:768px) {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    @media (max-width:575px) {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
