--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -126,7 +126,13 @@
         &--other {
             justify-content: space-between;
             flex-wrap: wrap;
+            @media (max-width:575px) {
+            flex-direction: column;            
+            align-items: center;
+            justify-content: flex-start;
         }
+        }
+        
     }
     .footer__text {
         max-width: none;
@@ -140,6 +146,9 @@
         &+& {
             margin-top: 0;
             margin-left: 15px;
+            @media (max-width:768px) {
+                margin-left: 0;                
+            }
         }
     }
     .footer__copyright-text {
