--- a/src/components/slider/slider.scss
+++ b/src/components/slider/slider.scss
@@ -84,6 +84,7 @@
 
 .slick-dots {
     display: flex;
+    margin-top: 10px;
     justify-content: center;
     align-items: center;
     line-height: 0px;
