--- a/src/components/collection-item/collection-item.scss
+++ b/src/components/collection-item/collection-item.scss
@@ -2,9 +2,15 @@
     display: inline-block;
     text-align: center;
     position: relative;
+
     max-width: 350px;
+    flex-basis: 150px;
+    flex-grow: 1;
     object-fit: cover;
     width: 100%;
+    &+&{
+        margin-left: 10px;
+    }
     @media (max-width: 1866px) {}
     &__info {
         position: absolute;
