--- a/src/components/our-inspiration/our-inspiration.pug
+++ b/src/components/our-inspiration/our-inspiration.pug
@@ -1,3 +1,4 @@
+include ../header-text/header-text.pug
 mixin our-inspiration()
     .our-inspiration&attributes(attributes)
         .our-inspiration__inner.container
@@ -5,14 +6,13 @@ mixin our-inspiration()
             .our-inspiration__content
                 img.our-inspiration__img(src="/img/Green_chair.png", alt="")
                 .our-inspiration__information
-
-                    h3.our-inspiration__header Our Inspiration in details
-                    p.our-inspiration__sub-header Semiotics fixie four dollar toast, next level woke scenester direct trade photo booth helvetica jean shorts. Fanny pack church-key cornhole, banh mi thundercats gochujang keytar.
+                    +header-text("Our Inspiration in details","our-inspiration__header")(class="our-inspiration__header-container")
+                        p.our-inspiration__sub-header Semiotics fixie four dollar toast, next level woke scenester direct trade photo booth helvetica jean shorts. Fanny pack church-key cornhole, banh mi thundercats gochujang keytar.
                     ul.our-inspiration__list
                         li.our-inspiration__item 
                             .our-inspiration__detail
-                                .our-inspiration__detail-name Design and technical drawings
-                                .our-inspiration__detail-value 80%
+                                .our-inspiration__item-name Design and technical drawings
+                                .our-inspiration__item-value 80%
                             .our-inspiration__line(style={width:"80%"})
                         li.our-inspiration__item 
                             .our-inspiration__detail
