--- a/src/components/aside-blog/aside-blog.pug
+++ b/src/components/aside-blog/aside-blog.pug
@@ -1,30 +1,30 @@
 include ../post/post.pug
 include ../social-links/social-links.pug
-mixin aside-blog(categories, posts, tags)
+mixin aside-blog(categories, posts, tags,classes)
     //- categories - массив объектов категорий {href="",caption=""}
     //- posts - массив объектов постов 
     //- tags - массив объектов тегов 
 
-    aside.aside-blog 
-        form.aside-blog__search-form(action="" method="GET")
+    aside.aside-blog&attributes(attributes)
+        form.aside-blog__search-form(action="" method="GET" class=classes.form)
             input.aside-blog__search-input(type="text" placeholder="Search")
             button.aside-blog__search-submit(type="submit")
-        .aside-blog__categories 
+        .aside-blog__categories(class=classes.category)
             h6.aside-blog__header.aside-blog__header--category Categories
             if categories
-                ul.aside-blog__categories-list
+                ul.aside-blog__categories-list(class=classes["category-list"])
                     each category in categories
                         li.aside-blog__categories-item
                             a.aside-blog__categories-link(href= category.href)= category.category 
                         
-        .aside-blog__recent-posts
+        .aside-blog__recent-posts(class=classes.posts)
             h6.aside-blog__header.aside-blog__header--posts Recent Posts
             if posts            
                 ul.aside-blog__recent-posts-list
                     each post in posts
                         li.aside-blog__recent-post
                             +post(post)(class="post--small")
-        .aside-blog__tags
+        .aside-blog__tags(class=classes.tags)
             h6.aside-blog__header.aside-blog__header--tags Tags
             if tags            
                 ul.aside-blog__tags-list
