--- a/src/pages/about/about.pug
+++ b/src/pages/about/about.pug
@@ -20,7 +20,7 @@ block main
             +breadcrumbs-item('Home', '/')
             +breadcrumbs-item('About')
     +about-text-block()(class="container about__text-block")
-    a.container-fluid.about__video(href="https://youtu.be/Nxg6UfofZX0" data-fancybox)
+    a.container-fluid.about__video.video-icon(href="https://youtu.be/Nxg6UfofZX0" data-fancybox)
         img(src="/img/video_post.jpg", alt="")
     +our-inspiration()(class="about__our-inspiration")
     +about-partners()(class="container-fluid about__about-partners")
