--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -28,18 +28,18 @@
         margin-bottom: 98px;
         position: relative;
         cursor: default;
-        &::before{
-            content: "";
-            position: absolute;
-            width: 80px;
-            height: 80px;
-            background: url(/img/play_button.svg) no-repeat center/contain;
-            left: 50%;
-            top:50%;
-            transform: translate(-50%,-50%);
-            z-index: 2;
-            cursor: pointer;
-        }
+        // &::before{
+        //     content: "";
+        //     position: absolute;
+        //     width: 80px;
+        //     height: 80px;
+        //     background: url(/img/play_button.svg) no-repeat center/contain;
+        //     left: 50%;
+        //     top:50%;
+        //     transform: translate(-50%,-50%);
+        //     z-index: 2;
+        //     cursor: pointer;
+        // }
         
         
         img {
