--- a/src/pages/blog/aside-data-blog.pug
+++ b/src/pages/blog/aside-data-blog.pug
@@ -67,4 +67,11 @@
             href:"category/bedroom-furniture"
             },
         ],
+        class:{
+           category:"blog__aside-category",
+           "category-list":"blog__aside-category-list",
+           posts: "blog__aside-posts",
+           tags:"blog__aside-tags",
+           form:"blog__aside-form",
+        }
     }
