--- a/src/pages/contact/contact.scss
+++ b/src/pages/contact/contact.scss
@@ -120,6 +120,7 @@
         margin-bottom: 20px;
         width: 100%;
         min-height: 125px;
+        resize: none;
         &::placeholder {
             font: $text-font;
             line-height: 28px;
