--- a/src/components/aside-blog/aside-blog.scss
+++ b/src/components/aside-blog/aside-blog.scss
@@ -1,8 +1,12 @@
 .aside-blog {
+  
     &__search-form {
         display: flex;
         position: relative;
         margin-bottom: 44px;
+        @media (max-width:1200px) {
+            width:100%;           
+        }
     }
     &__search-input {
         font: $text-font;
@@ -38,18 +42,49 @@
         &--posts {
             margin-bottom: 24px;
         }
+        @media (max-width:1200px) {
+            &--category {
+                margin-bottom: 5px;
+            }
+            &--posts {
+                margin-bottom: 5px;
+            }          
+        }
     }
-    &__categories-list {}
+    &__categories-list {
+        display: flex;
+        flex-wrap: wrap;
+        
+    }
     &__categories-item {
         font: $text-font;
         color: $text-color;
         &+& {
             margin-top: 11px;
+            @media (max-width:1200px) {
+                margin-top: 0;                
+            }
         }
+        @media (max-width:1200px) {
+            margin-right: 20px;
+            &:last-child{
+                margin-right: 0;
+            }            
+        }
+
     }
     &__categories-link {}
-    &__recent-posts {
+    &__recent-posts{
+        margin-bottom: 47px;
+    }
+    &__recent-posts-list {
         margin-bottom: 50px;
+        @media (max-width:1200px) {
+            margin-bottom: 0;            
+            &+&{
+                margin-left: 20px;
+            }
+        }
     }
     &__tags-list {
         display: flex;
@@ -71,11 +106,17 @@
     }
     &__social-links {
         display: flex;
+        
+        @media (max-width:1200px) {
+           margin: 0 auto;
+           margin-bottom: 50px;
+        }
     }
     &__social-item {
         font-size: 0px;
         &+& {
             margin-left: 20px;
         }
+       
     }
 }
