--- a/src/components/post/post.scss
+++ b/src/components/post/post.scss
@@ -1,4 +1,5 @@
 .post {
+  
     &__inner {
         display: flex;
         flex-direction: column;
@@ -17,6 +18,13 @@
             line-height: 1.3;
         }
     }
+    &__media{
+        position: relative;
+        margin-bottom: 25px;
+        @media (max-width: 575px) {
+            margin-bottom: 10px;
+        }
+    }
     &__img-link {
         order: 1;
         flex-grow: 1;
@@ -25,14 +33,22 @@
             margin-bottom: 5px;
         }
     }
+    
     &__img {
         width: 100%;
         object-fit: cover;
         &--small {
             height: 302px;
+            // @media (max-width:1200px) {
+            //     height: auto;                
+            // }
         }
         &--big {
             height: 415px;
+            @media (max-width:1200px) {
+                object-fit: contain;
+                height: auto;                
+            }
         }
     }
     &__params {
@@ -67,7 +83,7 @@
             font: $text-font;
             color: $text-color;
         }
-        .post__img-link {
+        .post__media {
             display: none;
         }
         .post__params {
@@ -79,6 +95,20 @@
         }
         .post__category {
             display: none;
+        }
+    }
+    &__slider-arrow {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        background-color: transparent;
+        border: none;
+        z-index: 1;
+        &--prev {
+            left: 16px;
+        }
+        &--next {
+            right: 16px;
         }
     }
 }
