--- a/src/pages/blog/blog.scss
+++ b/src/pages/blog/blog.scss
@@ -5,19 +5,67 @@
 @import "../../components/pagination/pagination.scss";
 .blog {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    @media (max-width: 1200px) {
+        flex-direction: column;
+        align-items: center;
+    }
     &__posts {
+        order: 1;
         max-width: 730px;
         margin-right: 15px;
         &:first-child {
             margin-bottom: 70px;
+            @media (max-width:768px) {
+                margin-bottom: 35px;        
+            }
         }
         &:nth-child(2) {
             margin-bottom: 40px;
+            // @media (max-width:768px) {
+            //     margin-bottom: 20px;        
+            // }
         }
+        @media (max-width: 1200px) {
+            flex-shrink: 1;
+            order: 2;
+            margin-right: 0px;
+        }
+        @media (max-width:768px) {
+            max-width: 100%;            
+        }
+    }
+    &__post {
+        margin-bottom: 80px;
+        @media (max-width:768px) {
+            margin-bottom: 40px;
+        }
+        @media (max-width:575px) {
+            margin-bottom: 20px;
+        }
+       
     }
     &__aside {
         max-width: 350px;
+        order: 2;
+        @media (max-width: 1200px) {
+            order: 1;
+            display: flex;
+            flex-wrap: wrap;
+            max-width: none;
+            align-items: flex-start;
+            max-width: 730px;
+            width: 100%;
+        }
+    }
+    &__aside-form{
+        margin-bottom: 20px;
+    }
+    &__aside-category{
+        margin-bottom: 20px;
+    }
+    &__aside-posts{
+        margin-bottom: 20px;
     }
     &__breadcrumbs {
         margin-bottom: 60px;
@@ -27,14 +75,16 @@
         display: block;
         padding: 55px;
         background: rgba(223, 223, 223, 0.5);
-        margin-bottom: 50px;
+        @media (max-width:768px) {
+            padding: 15px;            
+        }
     }
     &__blockquote-text {
         font: $text-font;
         font-weight: 300;
         font-style: italic;
-        font-size: 24px;
-        line-height: 38px;
+        font-size: $h4-size;
+        line-height: $h4-line-height;
         text-align: center;
         position: relative;
         padding-bottom: 25px;
@@ -47,8 +97,18 @@
             height: 1px;
             left: 50%;
             transform: translateX(-50%);
-            background-color: #6D7278;
+            background-color: #6d7278;
         }
+        @media (max-width:768px) {
+            padding-bottom: 10px;
+            margin-bottom: 10px;
+            font-size: $h5-size;
+            line-height: $h5-line-height;            
+        }
+        // @media (max-width:575px) {
+        //     font-size: $h5-size;
+        //     line-height: 1.3;         
+        // }
     }
     &__blockquote-author {
         display: block;
@@ -56,41 +116,32 @@
         font-size: $h5-size;
         line-height: $h5-line-height;
         text-align: center;
+        @media (max-width:768px) {
+            font-size: $h5-size;
+            line-height: $h5-line-height;            
+        }
     }
     &__slider {
         position: relative;
         margin-bottom: 50px;
     }
     &__video {
-        position: relative;
-        &::before {
-            content: "";
-            position: absolute;
-            width: 80px;
-            height: 80px;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%);
-            background-image: url(/img/icon-play.png);
-            background-repeat: no-repeat;
-        }
     }
-    &__slider-arrow {
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        background-color: transparent;
-        border: none;
-        z-index: 1;
-        &--prev {
-            left: 16px;
-        }
-        &--next {
-            right: 16px;
-        }
-    }
+
     &__pagination {
         display: flex;
         justify-content: center;
     }
+
+    // &__aside-form{
+    //     @media (max-width:1200px) {
+    //         width: 100%;
+    //     }
+    // }
+    // &__aside-category-list{
+    //     @media (max-width:1200px) {
+    //         display: flex;
+
+    //     }
+    // }
 }
